update index template

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<script src="/dll.bundle.js"></script>
+<script src="dll.bundle.js"></script>
 
 <body>
     <button id="btn" onClick="window.loadLibAsyncly()">Load lib.js asyncly</button>
